added delete reminder function
